--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.2",
+    "get-google-fonts": "^1.2.2",
+    "material-design-icons": "^3.0.1",
     "react": "^17.0.2",
+    "react-animated-weather": "^4.0.1",
     "react-dom": "^17.0.2",
+    "react-github-btn": "^1.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
